examples/invalid-cashscript/invalid-type-operator.cash
pragma cashscript >=0.7.0;

contract EmptyArrayAssignment() {
  function spend() {
    // Invalid expressions
    sig cc = sig(0xabcd) | sig(0xabcd);
    require(cc == 0x);
  }
}
